--- a/index.html
+++ b/index.html
@@ -278,6 +278,14 @@
                         </div>
                     </a>
                 </div>
+
+                <div class="lecture-card" data-title="lecture 23">
+                    <a href="Lecture 23/notes.html" target="_blank" rel="noopener noreferrer">
+                        <div class="card-content">
+                            <h2>Lecture 23</h2>
+                            <p class="lecture-topic">CSS Display Property</p>
+                            <p class="lecture-title">Lecture 23 Notes &amp; Code</p>
+                        </div>
             </section>
 
         </div>
