--- a/Lecture 23/main.html
+++ b/Lecture 23/main.html
@@ -174,8 +174,8 @@
     <h2>Display: inline</h2>
     <div class="inline-box">I am an inline box</div>
     <div class="inline-box">Another inline box</div>
-    <span>Span A</span>
-    <span>Span B</span>
+    <span>Span A</span> <!-- Span is Inline Element. -->
+    <span>Span B</span> <!-- Span is Inline Element. -->
 
     <!-- INLINE-BLOCK -->
     <h2>Display: inline-block</h2>
