--- a/Lecture 23/notes.html
+++ b/Lecture 23/notes.html
@@ -180,28 +180,15 @@
                     </li>
                 </ul>
 
-                <!-- ✅ Combined Hinglish Summary Block (inside section) -->
-                <div class="note-hinglish" style="border-top:1px dashed #ccc; padding-top:1rem;">
-                    <h3 style="margin-bottom:0.5rem;">📦 Summary in Hinglish:</h3>
-                    <p>
-                        Aaj maine <strong>CSS Display Property</strong> ke 5 mukhya types dekhe: <code>inline</code>,
-                        <code>inline-block</code>, <code>block</code>, <code>none</code>, aur
-                        <code>visibility: hidden</code>.
+                <!-- ✅ Combined Hinglish Summary Block -->
+                <div class="note-hinglish" style="margin-top: 2rem;">
+                    <p><strong>Hinglish Summary:</strong> Aaj maine <code>inline</code>, <code>inline-block</code>,
+                        <code>block</code>, <code>none</code>, aur <code>visibility: hidden</code> ke behavior dekhe.
                     </p>
-                    <p>
-                        Mujhe sabse zyada confusion <code>inline</code> vs <code>inline-block</code> mein tha. Ab clear
-                        hua ki <code>inline</code> height/width ignore karta hai, jabki <code>inline-block</code> box
-                        model ke saare properties apply karta hai.
-                    </p>
-                    <p>
-                        <code>display: none</code> element ko pura hata deta hai, lekin <code>visibility: hidden</code>
-                        uski jagah chhod deta hai.
-                    </p>
-                    <p>
-                        Jab iframe mein practice ki, to invisible boxes tabhi samjhe agar explanation box dekha.
-                        Beginners ko suggestion hai: code khud run karo aur element inspector dekho — tab hi perfect
-                        samajh aata hai!
-                    </p>
+                    <p>Inline elements height/width ignore karte hain; inline-block full box model support karta hai.
+                        Block new line start hota hai. None element ko completely hata deta hai; visibility:hidden uski
+                        jagah chhod deta hai.</p>
+                    <p>Practice mein iframe ke neeche explanation dekho — tabhi sab clear ho jayega!</p>
                 </div>
             </section>
 
